@@ -10,7 +10,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class MarathonService {
@@ -36,9 +35,9 @@ public class MarathonService {
                                         member.getId(),
                                         member.getName()
                                 ))
-                                .collect(Collectors.toList())
+                                .toList()
                 ))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public MarathonDTO getMarathonById(Long id) {
@@ -53,7 +52,7 @@ public class MarathonService {
                                         member.getId(),
                                         member.getName()
                                 ))
-                                .collect(Collectors.toList())
+                                .toList()
                 ))
                 .orElse(null);
     }
@@ -92,7 +91,7 @@ public class MarathonService {
                                             member.getId(),
                                             member.getName()
                                     ))
-                                    .collect(Collectors.toList())
+                                    .toList()
                     );
                 })
                 .orElse(null);
@@ -114,7 +113,7 @@ public class MarathonService {
                                             member.getId(),
                                             member.getName()
                                     ))
-                                    .collect(Collectors.toList())
+                                    .toList()
                     );
                 })
                 .orElse(null);
